--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-xgboost
-shap
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+xgboost>=1.5.0
+lightgbm>=3.3.0
+catboost>=1.0.0
+shap>=0.40.0
+optuna>=2.10.0
+jupyter>=1.0.0
+notebook>=6.4.0
+python-dotenv>=0.19.0
+joblib>=1.1.0
